# routers/router.go
@@ -11,12 +11,16 @@ import (
 
 func UseRouter() *gin.Engine {
 	r := gin.New()
-
+	r.Use(gin.Logger())
+	
 	docs.SwaggerInfo.Title = "RedRice API"
 	docs.SwaggerInfo.Description = "This is a server for managing restaurant with RedRice API build with Go Gin and Gorm"
 	docs.SwaggerInfo.BasePath = "/api/v1"
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
-	r.GET("/auth", api.Authenticate)
+
+
+	r.POST("/login", api.Login)
+	r.POST("/register", api.Register)
 	apiv1 := r.Group("/api/v1")
 	apiv1.Use()
 	{
